{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 54,
  "lineage": "bba3c8bb-dd93-b2ee-d56a-53968732d241",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:043309320500:instance/i-0dac9fbc0970ce4d9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dac9fbc0970ce4d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05eaff677941d80b7",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02eeba1e2c68c7ac7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09017b67d010b329d",
            "tags": {
              "Name": "db_server"
            },
            "tags_all": {
              "Name": "db_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0d615989f56c1c4"
            ]
          },
          "dependencies": [
            "aws_subnet.db_private_subnet",
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:internet-gateway/igw-0066644eb532a35e0",
            "id": "igw-0066644eb532a35e0",
            "owner_id": "043309320500",
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "vpc_id": "vpc-0675e459d899f8918"
          },
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:route-table/rtb-02b25379bfec618f8",
            "id": "rtb-02b25379bfec618f8",
            "owner_id": "043309320500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0066644eb532a35e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0675e459d899f8918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db_igw",
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_server_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4d3c1d825faa5cc",
            "route_table_id": "rtb-02b25379bfec618f8",
            "subnet_id": "subnet-0a49c56a605dc23d7"
          },
          "dependencies": [
            "aws_internet_gateway.db_igw",
            "aws_route_table.dbroute",
            "aws_subnet.public_subnet",
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:security-group/sg-0f8b7576a957d9868",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0f8b7576a957d9868",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "043309320500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_allow_tls"
            },
            "tags_all": {
              "Name": "db_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0675e459d899f8918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:subnet/subnet-09017b67d010b329d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09017b67d010b329d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309320500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "vpc_id": "vpc-0675e459d899f8918"
          },
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:subnet/subnet-0a49c56a605dc23d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a49c56a605dc23d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043309320500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-dbserver"
            },
            "tags_all": {
              "Name": "pub-sub-dbserver"
            },
            "vpc_id": "vpc-0675e459d899f8918"
          },
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:vpc/vpc-0675e459d899f8918",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-030dc12df88f58fd3",
            "default_route_table_id": "rtb-0f60c7dc0eb062f37",
            "default_security_group_id": "sg-0a0d615989f56c1c4",
            "dhcp_options_id": "dopt-01c0ee741b008262a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0675e459d899f8918",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f60c7dc0eb062f37",
            "owner_id": "043309320500"
          }
        }
      ]
    }
  ]
}